--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "scheduler": "^0.26.0",
